// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tests should render Tabs correctly 1`] = `
<DocumentFragment>
  .c2 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 500;
  font-family: 'Roboto',sans-serif;
  word-break: break-all;
  color: #000000;
}

.c0 {
  display: flex;
  background-color: #FFFFFF;
  position: relative;
}

.c1 {
  border: none;
  background-color: transparent;
  cursor: pointer;
  height: 2.75rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1 0 0;
  padding: 0 0.75rem;
  transition: background-color 0.1s ease-in-out;
  border-bottom: 2px solid #E2E2E2;
}

.c1:hover {
  background-color: #EEEEEE;
}

.c3 {
  position: absolute;
  pointer-events: none;
  z-index: 2;
  left: 0;
  bottom: 0;
  background-color: #000000;
  height: 2px;
  width: calc((100% / 2));
  transition: transform 0.2s ease-in-out;
  transform: translateX(0%);
}

<div
    class="c0"
    data-testid="tabs-component"
  >
    <button
      class="c1"
      data-testid="tab-button"
    >
      <p
        class="c2"
        color="#000000"
        font-family="roboto"
        font-weight="500"
      >
        Core
      </p>
    </button>
    <button
      class="c1"
      data-testid="tab-button"
    >
      <p
        class="c2"
        color="#000000"
        font-family="roboto"
        font-weight="500"
      >
        Advanced
      </p>
    </button>
    <div
      class="c3"
      numberofitems="2"
      translatex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs tests should render Tabs with space utils 1`] = `
<DocumentFragment>
  .c2 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 500;
  font-family: 'Roboto',sans-serif;
  word-break: break-all;
  color: #000000;
}

.c0 {
  margin-bottom: 20px;
  display: flex;
  background-color: #FFFFFF;
  position: relative;
}

.c1 {
  border: none;
  background-color: transparent;
  cursor: pointer;
  height: 2.75rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1 0 0;
  padding: 0 0.75rem;
  transition: background-color 0.1s ease-in-out;
  border-bottom: 2px solid #E2E2E2;
}

.c1:hover {
  background-color: #EEEEEE;
}

.c3 {
  position: absolute;
  pointer-events: none;
  z-index: 2;
  left: 0;
  bottom: 0;
  background-color: #000000;
  height: 2px;
  width: calc((100% / 2));
  transition: transform 0.2s ease-in-out;
  transform: translateX(0%);
}

<div
    class="c0"
    data-testid="tabs-component"
    mb="20"
  >
    <button
      class="c1"
      data-testid="tab-button"
    >
      <p
        class="c2"
        color="#000000"
        font-family="roboto"
        font-weight="500"
      >
        Core
      </p>
    </button>
    <button
      class="c1"
      data-testid="tab-button"
    >
      <p
        class="c2"
        color="#000000"
        font-family="roboto"
        font-weight="500"
      >
        Advanced
      </p>
    </button>
    <div
      class="c3"
      numberofitems="2"
      translatex="0"
    />
  </div>
</DocumentFragment>
`;
